# innovation-intelligence-copilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __main__.py  cli.py  main.py
backend/app/agents/: __init__.py  base.py  cache.py  executive_agent.py  memory.py  orchestrator.py  prompts.py  research_agent.py  retrieval.py  risk_agent.py  serialize.py  skeptic_agent.py  support_agent.py  tools.py  trend_agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analysis.py  auth.py  documents.py  health.py  knowledge.py  metrics.py  reports.py  streaming.py  webhooks.py
backend/app/core/: config.py  database.py  exceptions.py  logging_config.py  metrics.py  middleware.py  neo4j_client.py  openapi.py  rate_limit.py  security.py  startup.py  tasks.py  usage.py
backend/app/graph/: analytics.py  entity_extractor.py  import_service.py  persistence.py  service.py
backend/app/ingestion/: service.py
backend/app/models/: __init__.py  analysis.py  document.py  knowledge.py  user.py  webhook.py
backend/app/rag/: chunker.py  citation_tracker.py  embeddings.py  query_expansion.py  reranker.py  retriever.py  web_search.py
backend/app/reports/: generator.py
backend/scripts/: seed_data.json  seed_sample_docs.py
backend/tests/: conftest.py
backend/tests/unit/: test_analysis_api.py  test_auth.py  test_chunker.py  test_citation_tracker.py  test_orchestrator.py  test_report_generator.py  test_retriever.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md  CTO_Vision.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/auth/: login-button.tsx
frontend/src/components/dashboard/: activity-feed.tsx  command-palette.tsx  header.tsx  layout.tsx  sidebar.tsx  stats-card.tsx
frontend/src/components/notifications/: notification-provider.tsx
frontend/src/components/reports/: comparison-view.tsx  confidence-gauge.tsx  evidence-list.tsx  risk-matrix.tsx  signal-card.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown.tsx  how-it-works.tsx  input.tsx  progress.tsx  skeleton.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
frontend/src/hooks/: use-analysis.ts
frontend/src/lib/: api.ts  auth.ts
sample-docs/: crispr-therapeutics-competitive-landscape.txt  fda-ai-medical-device-guidance-summary.txt  precision-fermentation-market-report-2025.txt  quantum-computing-enterprise-readiness-2025.txt  solid-state-battery-technology-assessment.txt
